# Minecraft-Waypoint-Converter

./: .gitignore  Pipfile  README.md  pyproject.toml
docs/: README.md
minecraft-waypoint-converter/: convert_waypoints.py  main.py  standardized-format.py
minecraft-waypoint-converter/backend/waypoint_handlers/: waypoint_handler_xaeros.py
minecraft-waypoint-converter/classes/: __init__.py  file_dat_minecraft.py  file_extension.py  file_handler.py  file_json.py  file_txt.py  file_yaml.py  standard_world_waypoints.py  useful_methods.py  waypoints.py  waypoints_directory.py  waypoints_directory_mod_handler.py  waypoints_file.py  waypoints_file_mod_handler.py  waypoints_handler_lunar.py  waypoints_handler_xaeros.py  waypoints_lunar.py  waypoints_mod_handler.py  waypoints_xaeros.py
minecraft-waypoint-converter/frontend/: MCWPCMW.py  MinecraftWaypointConverterMainWindow.ui  gui.py  test.py  untitled.ui
minecraft-waypoint-converter/frontend/gui_components/: MinecraftWaypointConverterMainWindow.py
minecraft-waypoint-converter/waypoint_handlers/: standard_world_waypoints.py  waypoint_directory_mod_handler.py  waypoint_file_mod_handler.py  waypoint_handler_lunar.py  waypoint_mod_handler.py  waypoints_handler_lunar.py
src/minecraft_waypoint_converter/: __init__.py
